// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Add Recipient item > should render with exchange amount 1`] = `
<DocumentFragment>
  <div
    class="overflow-hidden mb-3 bg-white rounded border sm:pt-3 sm:bg-transparent sm:rounded-none sm:border-b-0 sm:border-dashed last:mb-0 border-theme-secondary-300 sm:border-x-0 sm:dark:bg-transparent dark:border-theme-dark-700 dark:bg-theme-dark-900"
    data-testid="AddRecipientItem"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:space-y-0 sm:space-x-4"
    >
      <div
        class="flex flex-col flex-1 w-full min-w-0 sm:items-start sm:space-y-1 sm:space-x-0 sm:w-auto"
      >
        <div
          class="flex flex-row flex-1 justify-between items-center py-3 px-4 w-full sm:p-0 sm:bg-transparent bg-theme-secondary-100 dark:bg-theme-dark-950 dark:sm:bg-transparent"
        >
          <div
            class="flex justify-between items-center w-full"
          >
            <div
              class="text-sm font-semibold whitespace-nowrap text-theme-secondary-700 leading-[17px] dark:text-theme-secondary-500"
            >
              Recipient #2
            </div>
            <button
              class="inline-flex relative justify-center items-center p-0 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer sm:hidden focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-secondary-500 focus:outline-hidden focus:ring-theme-primary-400"
              data-testid="AddRecipientItem--deleteButton_mobile"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="trash"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="px-4 pt-3 pb-4 sm:p-0 sm:w-full"
        >
          <div>
            <div
              class="hidden mt-1 leading-5 sm:block"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold leading-5"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Mainsail Wallet …
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold leading-5 no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </div>
            <div
              class="space-y-4 sm:hidden"
            >
              <div>
                <div
                  class="mb-2 text-sm font-semibold text-theme-secondary-700 leading-[17px] dark:text-theme-secondary-500"
                >
                  Address
                </div>
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="text-sm text-base font-semibold leading-[17px]"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      Mainsail Wallet …
                    </span>
                  </span>
                  <span
                    class="overflow-hidden min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px] text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="Address__address"
                  >
                    0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                  </span>
                </div>
              </div>
              <div>
                <div
                  class="mb-2 text-sm font-semibold text-theme-secondary-700 leading-[17px] dark:text-theme-secondary-500"
                >
                  Value
                </div>
                <span
                  class="text-sm font-semibold whitespace-nowrap text-theme-secondary-900 leading-[17px] dark:text-theme-secondary-200"
                  data-testid="Amount"
                >
                  1 DARK
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="hidden sm:block"
      >
        <div
          class="flex gap-3 items-center"
        >
          <div
            class="flex flex-col items-end space-y-2"
          >
            <div
              class="font-semibold whitespace-nowrap text-theme-secondary-700 leading-[17px] dark:text-theme-secondary-500"
            >
              <span
                class="hidden sm:inline"
                data-testid="AddRecipientItem--exchangeAmount"
              >
                <span
                  class="text-sm whitespace-nowrap leading-[17px]"
                  data-testid="Amount"
                >
                  $0.00
                </span>
              </span>
            </div>
            <span
              class="font-semibold leading-5 whitespace-nowrap text-theme-secondary-900 dark:text-theme-secondary-200"
              data-testid="Amount"
            >
              1 DARK
            </span>
          </div>
          <button
            class="inline-flex relative justify-center items-center p-2.5 space-x-3 w-11 h-11 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
            data-testid="AddRecipientItem--deleteButton"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="trash"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Recipient item > should render without exchange amount 1`] = `
<DocumentFragment>
  <div
    class="overflow-hidden mb-3 bg-white rounded border sm:pt-3 sm:bg-transparent sm:rounded-none sm:border-b-0 sm:border-dashed last:mb-0 border-theme-secondary-300 sm:border-x-0 sm:dark:bg-transparent dark:border-theme-dark-700 dark:bg-theme-dark-900"
    data-testid="AddRecipientItem"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:space-y-0 sm:space-x-4"
    >
      <div
        class="flex flex-col flex-1 w-full min-w-0 sm:items-start sm:space-y-1 sm:space-x-0 sm:w-auto"
      >
        <div
          class="flex flex-row flex-1 justify-between items-center py-3 px-4 w-full sm:p-0 sm:bg-transparent bg-theme-secondary-100 dark:bg-theme-dark-950 dark:sm:bg-transparent"
        >
          <div
            class="flex justify-between items-center w-full"
          >
            <div
              class="text-sm font-semibold whitespace-nowrap text-theme-secondary-700 leading-[17px] dark:text-theme-secondary-500"
            >
              Recipient #2
            </div>
            <button
              class="inline-flex relative justify-center items-center p-0 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer sm:hidden focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-secondary-500 focus:outline-hidden focus:ring-theme-primary-400"
              data-testid="AddRecipientItem--deleteButton_mobile"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="trash"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="px-4 pt-3 pb-4 sm:p-0 sm:w-full"
        >
          <div>
            <div
              class="hidden mt-1 leading-5 sm:block"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <span
                  class="text-base font-semibold leading-5"
                  data-testid="Address__alias"
                >
                  <span
                    class="transition-colors duration-200 no-ligatures"
                    data-testid="TruncateEnd"
                  >
                    Mainsail Wallet …
                  </span>
                </span>
                <span
                  class="overflow-hidden min-w-0 text-base font-semibold leading-5 no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </div>
            <div
              class="space-y-4 sm:hidden"
            >
              <div>
                <div
                  class="mb-2 text-sm font-semibold text-theme-secondary-700 leading-[17px] dark:text-theme-secondary-500"
                >
                  Address
                </div>
                <div
                  class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                >
                  <span
                    class="text-sm text-base font-semibold leading-[17px]"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      Mainsail Wallet …
                    </span>
                  </span>
                  <span
                    class="overflow-hidden min-w-0 text-sm text-base font-semibold no-ligatures leading-[17px] text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="Address__address"
                  >
                    0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                  </span>
                </div>
              </div>
              <div>
                <div
                  class="mb-2 text-sm font-semibold text-theme-secondary-700 leading-[17px] dark:text-theme-secondary-500"
                >
                  Value
                </div>
                <span
                  class="text-sm font-semibold whitespace-nowrap text-theme-secondary-900 leading-[17px] dark:text-theme-secondary-200"
                  data-testid="Amount"
                >
                  1 DARK
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="hidden sm:block"
      >
        <div
          class="flex gap-3 items-center"
        >
          <div
            class="flex flex-col items-end space-y-2"
          >
            <div
              class="font-semibold whitespace-nowrap text-theme-secondary-700 leading-[17px] dark:text-theme-secondary-500"
            >
              <span
                class="text-sm leading-[17px]"
              >
                Amount
              </span>
            </div>
            <span
              class="font-semibold leading-5 whitespace-nowrap text-theme-secondary-900 dark:text-theme-secondary-200"
              data-testid="Amount"
            >
              1 DARK
            </span>
          </div>
          <button
            class="inline-flex relative justify-center items-center p-2.5 space-x-3 w-11 h-11 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
            data-testid="AddRecipientItem--deleteButton"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="trash"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
